--- a/index.html
+++ b/index.html
@@ -61,9 +61,6 @@
     </div>
 
     <!-- Secțiunea Meniu -->
-   
-      
-   
 
     <div class="menu">
         <h1>Meniu</h1>
@@ -77,54 +74,90 @@
                 <img src="img/kebab.pui.jpg" alt="kebab-pui" width="150px">
                 <div class="product-info">
                     <h4>Kebab de pui</h4>
-                    <p>Preț: 10 MDL</p>
+                    <p>Preț: 90 MDL</p>
+                    <h5>500 gr.</h5>
                     <button onclick="addToCart('Kebab de pui', 10)">Adaugă în Coș</button>
                 </div>
             </div>
             <div class="product">
                 <img src="img/kebab.pui.jpg" alt="kebab-pui" width="150px">
                 <div class="product-info">
-                    <h4>Kebab de vita</h4>
-                    <p>Preț: 10 MDL</p>
+                    <h4>Beef Kebab</h4>
+                    <p>Preț: 110 MDL</p>
+                    <h5>500 gr.</h5>
                     <button onclick="addToCart('Kebab de vita', 10)">Adaugă în Coș</button>
                 </div>
             </div>
             <div class="product">
                 <img src="img/kebab.pui.jpg" alt="kebab-pui" width="150px">
-                <h4>Burger</h4>
-                <p>Preț: 10 MDL</p>
+                <h4>Pork Kebab</h4>
+                <p>Preț: 100 MDL</p>
+                <h5>500 gr.</h5>
                 <button onclick="addToCart('Burger', 10)">Adaugă în Coș</button>
             </div>
             <div class="product">
                 <img src="img/kebab.pui.jpg" alt="kebab-pui" width="150px">
-                <h4>Salat</h4>
-                <p>Preț: 10 MDL</p>
+                <h4>School Combo</h4>
+                <p>Preț: 90 MDL</p>
+                <h5>380 gr./100 gr.</h5>
                 <button onclick="addToCart('Salat', 10)">Adaugă în Coș</button>
             </div>
             <div class="product">
                 <img src="img/kebab.pui.jpg" alt="kebab-pui" width="150px">
-                <h4>Bowl</h4>
-                <p>Preț: 10 MDL</p>
+                <h4>Combo de pui</h4>
+                <p>Preț: 140 MDL</p>
+                <h5>500 gr./100 gr./40gr.</h5>
                 <button onclick="addToCart('Bowl', 10)">Adaugă în Coș</button>
             </div>
             <div class="product">
                 <img src="img/kebab.pui.jpg" alt="kebab-pui" width="150px">
-                <h4>Cartofi pai</h4>
-                <p>Preț: 10 MDL</p>
+                <h4>Combo Beef</h4>
+                <p>Preț: 160 MDL</p>
+                <h5>500 gr./100 gr./40gr.</h5>
                 <button onclick="addToCart('Cartofi pai', 10)">Adaugă în Coș</button>
             </div>
             <div class="product">
                 <img src="img/kebab.pui.jpg" alt="kebab-pui" width="150px">
-                <h4>Cartofi pai</h4>
-                <p>Preț: 10 MDL</p>
+                <h4>Combo Pork</h4>
+                <p>Preț: 150 MDL</p>
+                <h5>500 gr./100 gr./40gr.</h5>
                 <button onclick="addToCart('Cartofi pai', 10)">Adaugă în Coș</button>
             </div>
             <div class="product">
                 <img src="img/kebab.pui.jpg" alt="kebab-pui" width="150px">
-                <h4>Cartofi pai</h4>
-                <p>Preț: 10 MDL</p>
+                <h4>Kebab De Pui 1KG</h4>
+                <p>Preț: 160 MDL</p>
                 <button onclick="addToCart('Cartofi pai', 10)">Adaugă în Coș</button>
             </div>
+            <div class="product">
+                <img src="img/kebab.pui.jpg" alt="kebab-pui" width="150px">
+                <h4>School Kebab</h4>
+                <p>Preț: 60 MDL</p>
+                <h5>380 gr.</h5>
+                <button onclick="addToCart('Cartofi pai', 10)">Adaugă în Coș</button>
+            </div>
+            <div class="add-ons">
+                <h3>Adaugă la kebab:</h3>
+                <div class="sauces">
+                    <div class="sauce">
+                        <h4>Pui 100 gr. (20 MDL)</h4>
+                        <button onclick="addToCart('Pui 100 gr.', 20)">+</button>
+                    </div>
+                    <div class="sauce">
+                        <h4>Pork 100 gr. (45 MDL)</h4>
+                        <button onclick="addToCart('Pork 100 gr.', 45)">+</button>
+                    </div>
+                    <div class="sauce">
+                        <h4>Vită 100 gr. (50 MDL)</h4>
+                        <button onclick="addToCart('Vită 100 gr.', 50)">+</button>
+                    </div>
+                    <div class="sauce">
+                        <h4>Cașcaval 40 gr. (14 MDL)</h4>
+                        <button onclick="addToCart('Cașcaval 40 gr.', 14)">+</button>
+                    </div>
+                </div>
+            </div>
+            
         </div>
     </div>
 
@@ -134,161 +167,194 @@
         <div class="products-container">
             <div class="product">
                 <img src="img/salata-carne-cartofi.JPG" alt="kebab-pui" width="150px">
-                <h4>Salată 1</h4>
-                <p>Preț: 10 MDL</p>
+                <h4>Beef Salat</h4>
+                <p>Preț: 130 MDL</p>
+                <h5>300 gr.</h5>
                 <button onclick="addToCart('Salată 1', 10)">Adaugă în Coș</button>
             </div>
             <div class="product">
                 <img src="img/salata-carne-cartofi.JPG" alt="kebab-pui" width="150px">
-                <h4>Salată 2</h4>
-                <p>Preț: 10 MDL</p>
+                <h4>Chichen Salat</h4>
+                <p>Preț: 90 MDL</p>
+                <h5>380 gr.</h5>
                 <button onclick="addToCart('Salată 2', 10)">Adaugă în Coș</button>
             </div>
             <div class="product">
                 <img src="img/salata-carne-cartofi.JPG" alt="kebab-pui" width="150px">
-                <h4>Salată 3</h4>
-                <p>Preț: 10 MDL</p>
+                <h4>Fresh Salat</h4>
+                <p>Preț: 50 MDL</p>
+                <h5>250 gr.</h5>
                 <button onclick="addToCart('Salată 3', 10)">Adaugă în Coș</button>
-            </div>
-            <div class="product">
-                <img src="img/salata-carne-cartofi.JPG" alt="kebab-pui" width="150px">
-                <h4>Salată 4</h4>
-                <p>Preț: 10 MDL</p>
-                <button onclick="addToCart('Salată 4', 10)">Adaugă în Coș</button>
-            </div>
-            <div class="product">
-                <img src="img/salata-carne-cartofi.JPG" alt="kebab-pui" width="150px">
-                <h4>Salată 5</h4>
-                <p>Preț: 10 MDL</p>
-                <button onclick="addToCart('Salată 5', 10)">Adaugă în Coș</button>
-            </div>
-            <div class="product">
-                <img src="img/salata-carne-cartofi.JPG" alt="kebab-pui" width="150px">
-                <h4>Salată 6</h4>
-                <p>Preț: 10 MDL</p>
-                <button onclick="addToCart('Salată 6', 10)">Adaugă în Coș</button>
-            </div>
-            <div class="product">
-                <img src="img/salata-carne-cartofi.JPG" alt="kebab-pui" width="150px">
-                <h4>Salată 6</h4>
-                <p>Preț: 10 MDL</p>
-                <button onclick="addToCart('Salată 6', 10)">Adaugă în Coș</button>
-            </div>
-            <div class="product">
-                <img src="img/salata-carne-cartofi.JPG" alt="kebab-pui" width="150px">
-                <h4>Salată 6</h4>
-                <p>Preț: 10 MDL</p>
-                <button onclick="addToCart('Salată 6', 10)">Adaugă în Coș</button>
             </div>
         </div>
     </div>
 
-    <!-- Secțiunea Bauturi -->
+        <!-- Secțiunea Bowl -->
+        <div class="products">
+            <h2>Bowl</h2>
+            <div class="products-container">
+                <div class="product">
+                    <img src="img/salata-carne-cartofi.JPG" alt="kebab-pui" width="150px">
+                    <h4>Chichen Bowl</h4>
+                    <p>Preț: 95 MDL</p>
+                    <h5>350 gr.</h5>
+                    <button onclick="addToCart('Salată 1', 10)">Adaugă în Coș</button>
+                </div>
+                <div class="product">
+                    <img src="img/salata-carne-cartofi.JPG" alt="kebab-pui" width="150px">
+                    <h4>Pork Bowl</h4>
+                    <p>Preț: 160 MDL</p>
+                    <h5>350 gr.</h5>
+                    <button onclick="addToCart('Salată 2', 10)">Adaugă în Coș</button>
+                </div>
+                <div class="product">
+                    <img src="img/salata-carne-cartofi.JPG" alt="kebab-pui" width="150px">
+                    <h4>Fish & Chips</h4>
+                    <p>Preț: 140 MDL</p>
+                    <h5>280 gr.</h5>
+                    <button onclick="addToCart('Salată 3', 10)">Adaugă în Coș</button>
+                </div>
+            </div>
+        </div>
+
+    <!-- Secțiunea Cartofi Pai,Nuggets,aripioare -->
     <div class="products">
-        <h2>Băuturi</h2>
+        <h2> Cartofi Pai,Nuggets,aripioare</h2>
         <div class="products-container">
             <div class="product">
                 <img src="img/bauturi.jpg" alt="kebab-pui" width="150px">
-                <h4>Băutură 1</h4>
-                <p>Preț: 10 MDL</p>
+                <h4>Cartofi Pai</h4>
+                <p>Preț: 35 MDL</p>
+                <h5>100 gr./40 gr.</h5>
                 <button onclick="addToCart('Băutură 1', 10)">Adaugă în Coș</button>
             </div>
             <div class="product">
                 <img src="img/bauturi.jpg" alt="kebab-pui" width="150px">
-                <h4>Băutură 2</h4>
-                <p>Preț: 10 MDL</p>
+                <h4>Cartofi Rustic</h4>
+                <p>Preț: 35 MDL</p>
+                <h5>180 gr.</h5>
                 <button onclick="addToCart('Băutură 2', 10)">Adaugă în Coș</button>
             </div>
             <div class="product">
                 <img src="img/bauturi.jpg" alt="kebab-pui" width="150px">
-                <h4>Băutură 3</h4>
-                <p>Preț: 10 MDL</p>
+                <h4>Chichen Nuggets</h4>
+                <p>Preț: 69 MDL</p>
+                <h5>180 gr./40 gr.</h5>
                 <button onclick="addToCart('Băutură 3', 10)">Adaugă în Coș</button>
             </div>
             <div class="product">
                 <img src="img/bauturi.jpg" alt="kebab-pui" width="150px">
-                <h4>Băutură 4</h4>
-                <p>Preț: 10 MDL</p>
+                <h4>Cheese Nuggets</h4>
+                <p>Preț: 60 MDL</p>
+                <h5>180 gr./40 gr.</h5>
                 <button onclick="addToCart('Băutură 4', 10)">Adaugă în Coș</button>
             </div>
             <div class="product">
                 <img src="img/bauturi.jpg" alt="kebab-pui" width="150px">
-                <h4>Băutură 5</h4>
-                <p>Preț: 10 MDL</p>
+                <h4>Aripioare De Pui</h4>
+                <p>Preț: 60 MDL</p>
+                <h5>180 gr./40 gr.</h5>
                 <button onclick="addToCart('Băutură 5', 10)">Adaugă în Coș</button>
-            </div>
-            <div class="product">
-                <img src="img/bauturi.jpg" alt="kebab-pui" width="150px">
-                <h4>Băutură 6</h4>
-                <p>Preț: 10 MDL</p>
-                <button onclick="addToCart('Băutură 6', 10)">Adaugă în Coș</button>
-            </div>
-            <div class="product">
-                <img src="img/bauturi.jpg" alt="kebab-pui" width="150px">
-                <h4>Băutură 6</h4>
-                <p>Preț: 10 MDL</p>
-                <button onclick="addToCart('Băutură 6', 10)">Adaugă în Coș</button>
-            </div>
-            <div class="product">
-                <img src="img/bauturi.jpg" alt="kebab-pui" width="150px">
-                <h4>Băutură 6</h4>
-                <p>Preț: 10 MDL</p>
-                <button onclick="addToCart('Băutură 6', 10)">Adaugă în Coș</button>
             </div>
         </div>
     </div>
 
-    <!-- Secțiunea Deserturi -->
+    <!-- Secțiunea Burger -->
     <div class="products">
-        <h2>Deserturi</h2>
+        <h2>Burger</h2>
         <div class="products-container">
             <div class="product">
                 <img src="img/desert1.JPG" alt="kebab-pui" width="150px">
-                <h4>Desert 1</h4>
-                <p>Preț: 10 MDL</p>
+                <h4>Texas Burger</h4>
+                <p>Preț: 95 MDL</p>
+                <h5>350 gr.</h5>
                 <button onclick="addToCart('Desert 1', 10)">Adaugă în Coș</button>
             </div>
             <div class="product">
                 <img src="img/desert1.JPG" alt="kebab-pui" width="150px">
-                <h4>Desert 2</h4>
-                <p>Preț: 10 MDL</p>
+                <h4>Cheeseburger</h4>
+                <p>Preț: 95 MDL</p>
+                <h5>350 gr.</h5>
                 <button onclick="addToCart('Desert 2', 10)">Adaugă în Coș</button>
             </div>
             <div class="product">
                 <img src="img/desert1.JPG" alt="kebab-pui" width="150px">
-                <h4>Desert 3</h4>
-                <p>Preț: 10 MDL</p>
+                <h4>Steak Burger</h4>
+                <p>Preț: 110 MDL</p>
+                <h5>350 gr.</h5>
                 <button onclick="addToCart('Desert 3', 10)">Adaugă în Coș</button>
             </div>
             <div class="product">
                 <img src="img/desert1.JPG" alt="kebab-pui" width="150px">
-                <h4>Desert 4</h4>
-                <p>Preț: 10 MDL</p>
+                <h4>Double Texas Burger</h4>
+                <p>Preț: 125 MDL</p>
+                <h5>450 gr.</h5> 
                 <button onclick="addToCart('Desert 4', 10)">Adaugă în Coș</button>
             </div>
             <div class="product">
                 <img src="img/desert1.JPG" alt="kebab-pui" width="150px">
-                <h4>Desert 5</h4>
-                <p>Preț: 10 MDL</p>
+                <h4>Double Cheeseburger</h4>
+                <p>Preț: 125 MDL</p>
+                <h5>450 gr.</h5>
                 <button onclick="addToCart('Desert 5', 10)">Adaugă în Coș</button>
             </div>
             <div class="product">
                 <img src="img/desert1.JPG" alt="kebab-pui" width="150px">
-                <h4>Desert 6</h4>
-                <p>Preț: 10 MDL</p>
+                <h4>Double Steak Burger</h4>
+                <p>Preț: 150 MDL</p>
+                <h5>450 gr.</h5>
                 <button onclick="addToCart('Desert 6', 10)">Adaugă în Coș</button>
             </div>
             <div class="product">
                 <img src="img/desert1.JPG" alt="kebab-pui" width="150px">
-                <h4>Desert 6</h4>
-                <p>Preț: 10 MDL</p>
+                <h4>Combo Texas Burger</h4>
+                <p>Preț: 140 MDL</p>
+                <h5>350 gr./100 gr./40 gr.</h5>
                 <button onclick="addToCart('Desert 6', 10)">Adaugă în Coș</button>
             </div>
             <div class="product">
                 <img src="img/desert1.JPG" alt="kebab-pui" width="150px">
-                <h4>Desert 6</h4>
-                <p>Preț: 10 MDL</p>
+                <h4>Combo Cheeseburger</h4>
+                <p>Preț: 140 MDL</p>
+                <h5>350 gr./100 gr./40 gr.</h5>
                 <button onclick="addToCart('Desert 6', 10)">Adaugă în Coș</button>
+            </div>
+            <div class="product">
+                <img src="img/desert1.JPG" alt="kebab-pui" width="150px">
+                <h4>Combo Steak Burger</h4>
+                <p>Preț: 160 MDL</p>
+                <h5>350 gr./100 gr./40 gr.</h5>
+                <button onclick="addToCart('Desert 6', 10)">Adaugă în Coș</button>
+            </div>
+
+            <div class="add-ons">
+                <h3>Adaugă sosuri:</h3>
+                <div class="sauces">
+                    <div class="sauce">
+                        <h4>Aioli (15 MDL)</h4>
+                        <button onclick="addToCart('Aioli', 15)">+</button>
+                    </div>
+                    <div class="sauce">
+                        <h4>BBQ (15 MDL)</h4>
+                        <button onclick="addToCart('BBQ', 15)">+</button>
+                    </div>
+                    <div class="sauce">
+                        <h4>Cezar (15 MDL)</h4>
+                        <button onclick="addToCart('Cezar', 15)">+</button>
+                    </div>
+                    <div class="sauce">
+                        <h4>Maioneză (15 MDL)</h4>
+                        <button onclick="addToCart('Maioneză', 15)">+</button>
+                    </div>
+                    <div class="sauce">
+                        <h4>Muștar (15 MDL)</h4>
+                        <button onclick="addToCart('Muștar', 15)">+</button>
+                    </div>
+                    <div class="sauce">
+                        <h4>Chimichurri (20 MDL)</h4>
+                        <button onclick="addToCart('Chimichurri', 20)">+</button>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
